src/tests/errors/tuples/001.ura
// errors/tuples/001 — tuple unpack count mismatch
use "@/header"

fn pair() (int, int):
    return 1, 2

main():
    a int, b int, c int = pair()
    output(a, "\n")
